# pre-commit-message-shorthand

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
message_shorthand/: __init__.py  cli_test.py  errors.py  main.py  substitute_commit_msg_test.py
