[metadata]
name = message_shorthand
version = 0.10.0
description = Allows the use short aliases in commit message which are rephrased by long common phrases, such as Coauthor information.
url = https://github.com/KjeldSchmidt/pre-commit-message-shorthand
author = Kjeld Schmidt
author_email = contact@kjeld-schmidt.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    message_shorthand = message_shorthand:substitute_commit_msg

[bdist_wheel]
universal = True
